--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,13 +5,10 @@
 <title>MMTS Train Finder</title>
 </head>
 <body background="/images/background.jpg">
-<center>
-	<iframe
-	    allow="microphone;"
-	    width="480px"
-	    height="640px"
-	    src="https://console.dialogflow.com/api-client/demo/embedded/b351da5f-806f-4bee-8809-9fc3f62553b6">
-	</iframe>
-</center>
+	<center>
+		<iframe allow="microphone;" width="480" height="640"
+			src="https://console.dialogflow.com/api-client/demo/embedded/b351da5f-806f-4bee-8809-9fc3f62553b2">
+		</iframe>
+	</center>
 </body>
 </html>
