--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 <meta charset="ISO-8859-1">
 <title>MMTS Train Finder</title>
 </head>
-<body background="/images/background.jpg">
+<body style="background-color:lightgrey;">
 	<center>
 		<iframe allow="microphone;" width="480" height="640"
 			src="https://console.dialogflow.com/api-client/demo/embedded/b351da5f-806f-4bee-8809-9fc3f62553b2">
