--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>MMTS Train Finder</title>
+<title>MMTS Train Timings</title>
 </head>
 <body style="background-color:lightgrey;">
 	<center>
