--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,8 +18,11 @@ function loadDoc() {
 </script>
 </head>
 <body style="background-color: lightgrey;">
-	
-	<center><img src="/images/icon.png" width="50px"/><h1>MMTS Train Timings</h1></center>
+
+	<center>
+		<img src="/images/icon.png" width="50px" />
+		<h1>MMTS Train Timings</h1>
+	</center>
 	<center>
 		From: <select id="from" name="from">
 			<option value="aler">aler</option>
@@ -81,8 +84,7 @@ function loadDoc() {
 			<option value="wangapalli">wangapalli</option>
 			<option value="warangal">warangal</option>
 			<option value="yakutpura">yakutpura</option>
-		</select> To: <select id="to"
-			name="to">
+		</select> To: <select id="to" name="to">
 			<option value="aler">aler</option>
 			<option value="alwal">alwal</option>
 			<option value="ammuguda">ammuguda</option>
@@ -167,8 +169,7 @@ function loadDoc() {
 			<option value="21">21</option>
 			<option value="22">22</option>
 			<option value="23">23</option>
-		</select> 
-		Mins: <select id="minutes" name="minutes">
+		</select> Mins: <select id="minutes" name="minutes">
 			<option value="0">0</option>
 			<option value="1">1</option>
 			<option value="2">2</option>
@@ -193,11 +194,46 @@ function loadDoc() {
 			<option value="21">21</option>
 			<option value="22">22</option>
 			<option value="23">23</option>
-		</select><br><br>
-		<button type="button" onclick="loadDoc()">Find
-			Trains</button>
-			<br><br><br><br><br>
-			<div id="resp"></div>
+			<option value="24">24</option>
+			<option value="25">25</option>
+			<option value="26">26</option>
+			<option value="27">27</option>
+			<option value="28">28</option>
+			<option value="29">29</option>
+			<option value="30">30</option>
+			<option value="31">31</option>
+			<option value="32">32</option>
+			<option value="33">33</option>
+			<option value="34">34</option>
+			<option value="35">35</option>
+			<option value="36">36</option>
+			<option value="37">37</option>
+			<option value="38">38</option>
+			<option value="39">39</option>
+			<option value="40">40</option>
+			<option value="41">41</option>
+			<option value="42">42</option>
+			<option value="43">43</option>
+			<option value="44">44</option>
+			<option value="45">45</option>
+			<option value="46">46</option>
+			<option value="47">47</option>
+			<option value="48">48</option>
+			<option value="49">49</option>
+			<option value="50">50</option>
+			<option value="51">51</option>
+			<option value="52">52</option>
+			<option value="53">53</option>
+			<option value="54">54</option>
+			<option value="55">55</option>
+			<option value="56">56</option>
+			<option value="57">57</option>
+			<option value="58">58</option>
+			<option value="59">59</option>
+		</select><br> <br><br>
+		<button type="button" onclick="loadDoc()" style="height:30px;width:150px;font-size: 16px;">Find Trains</button>
+		<br> <br> <br> <br> <br>
+		<h2 id="resp"></h2>
 	</center>
 </body>
 </html>
