--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,7 +40,7 @@ height: 30px; font-size: 16px;
 }
 </style>
 </head>
-<body style="background-color: lightgrey;">
+<body style="background-image: url('/images/background.jpg')">
 
 	<center>
 		<img src="/images/icon.png" width="50px" />
