--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,6 +32,12 @@ function loadDoc() {
 }
 </script>
 <style>
+body {
+  background-image: url('/images/background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-size: 100% 100%;
+}
 .select {
 height: 30px; width: 250px; font-size: 16px;
 }
@@ -40,7 +46,7 @@ height: 30px; font-size: 16px;
 }
 </style>
 </head>
-<body style="background-image: url('/images/background.jpg')">
+<body>
 
 	<center>
 		<img src="/images/icon.png" width="50px" />
