--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>MMTS Train Timings</title>
-<link rel="icon" type="image/x-icon" href="/images/favicon.ico?v=2">
 <script>
 function loadDoc() {
     var xhttp = new XMLHttpRequest();
@@ -50,7 +49,7 @@ height: 30px; font-size: 16px;
 <body>
 
 	<center>
-		<img src="/images/iconSmall.png" style = "border-radius: 10px;"/>
+		<img src="/images/icon.png" width="50px" />
 		<h1>MMTS Train Timings</h1>
 	</center>
 	<center>
